--- a/src/main/asciidoc/03-detailed-design.adoc
+++ b/src/main/asciidoc/03-detailed-design.adoc
@@ -1,13 +1,13 @@
-= Design di dettaglio
+== Design di dettaglio
 :pumldir: ./assets/puml
 
 In questa sezione, si mostrano le scelte di design più critiche circa l'organizzazione della struttura del sistema e dei suoi componenti.
 
-== Model
+=== Model
 
-=== Gameboard
+==== Gameboard
 
-[plantuml, format="svg"]
+[plantuml, grid, format="svg"]
 ----
-include::{pumldir}/test.puml[]
+include::{pumldir}/Grid.puml[align=center]
 ----
